# ESP32_Lvgl8

./: README.en.md  README.md  sdkconfig.old
components/lvgl/: lv_conf_template.h
components/lvgl_esp32_drivers/: lvgl_helpers.h
components/lvgl_esp32_drivers/lvgl_touch/: gt911.c
main/: CMakeLists.txt  blink.c  lvgl_init.c  lvgl_init.h
main/include/: board_gpio.h  board_mfrc522.h  board_spi.h  user_nfc.h
main/src/: board_gpio.c  board_mfrc522.c  board_spi.c  user_nfc.c
mqtt_linux/: sub3.py
